# Initial-D-VFS-tools

./: CMakeLists.txt  README.md  VFS-data-structure.md  win_script.py  workflow.py
.github/workflows/: cmake-multi-platform.yml
crc-bruteforce/: CMakeLists.txt  README.md  main.cpp
crc-bruteforce/python-ver/: hashing.py  single-thread.py
polynomialBF/: CMakeLists.txt  README.md  binaryReader.cpp  box.cpp  box.hpp  crc.cpp  main.cpp  this_file_as_argv1.txt  utils.cpp
py-tools/: crcalc.py
removed/: counter.hpp  crcHashmap.cpp  test.cpp  vfs.cpp
src/: adler32.cpp  binaryReader.cpp  binaryReader.hpp  box.cpp  box.hpp  cli.cpp  cli.hpp  counter.cpp  counter.hpp  crc.cpp  crc.hpp  main.cpp  test.cpp  utils.cpp  vfs.cpp  vfs.hpp  win_vfs.cpp
